# kairos-arturgoms

./: .gitignore  README.md
components/core/: CMakeLists.txt  kairos.h
components/core/def/: board.h  common.c  common.h
components/core/drv/display/: gdeh0154d67.c  gdeh0154d67.h
components/core/hal/modules/: modules.c  modules.h
components/core/test/: demo.h  test_display.c
main/: main.c
